[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "steering_reasoning_models"
version = "0.9.0"
description = "Steering the chain of thought of reasoning LLMs"
authors = ["Rauno Arike <rauno.arike@gmail.com>"]
url = "https://github.com/RaunoArike/steering_cot"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"